objects/blng__CreditNoteAllocation__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Used by Data Packs to identify and update records.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>blng__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__BillingFinanceBook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Finance Book</label>
        <referenceTo>blng__FinanceBook__c</referenceTo>
        <relationshipLabel>Credit Note Allocations</relationshipLabel>
        <relationshipName>BillingFinanceBookCreditNoteAllocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingFinancePeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Finance Period</label>
        <referenceTo>blng__FinancePeriod__c</referenceTo>
        <relationshipLabel>Credit Note Allocations</relationshipLabel>
        <relationshipName>BillingFinancePerioCreditNoteAllocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingGLRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing GL Rule</label>
        <referenceTo>blng__GLRule__c</referenceTo>
        <relationshipLabel>Credit Note Allocations</relationshipLabel>
        <relationshipName>BillingGLRuleCreditNoteAllocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingGLTreatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing GL Treatment</label>
        <referenceTo>blng__GLTreatment__c</referenceTo>
        <relationshipLabel>Credit Note Allocations</relationshipLabel>
        <relationshipName>BillingGLTreatmentCreditNoteAllocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Rule</label>
        <referenceTo>blng__BillingRule__c</referenceTo>
        <relationshipLabel>Credit Note Allocations</relationshipLabel>
        <relationshipName>BillingRuleCreditNoteAllocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingTreatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Treatment</label>
        <referenceTo>blng__BillingTreatment__c</referenceTo>
        <relationshipLabel>Credit Note Allocations</relationshipLabel>
        <relationshipName>BillingTreatmentCreditNoteAllocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__CreditNoteLine__c</fullName>
        <label>Credit Note Line</label>
        <referenceTo>blng__CreditNoteLine__c</referenceTo>
        <relationshipName>CreditAllocations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>blng__ImpactAmount__c</fullName>
        <formula>-  blng__Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Impact Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceLine__c</fullName>
        <label>Invoice Line</label>
        <referenceTo>blng__InvoiceLine__c</referenceTo>
        <relationshipName>CreditAllocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__LegalEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Entity</label>
        <referenceTo>blng__LegalEntity__c</referenceTo>
        <relationshipLabel>Credit Note Allocations</relationshipLabel>
        <relationshipName>Credit_Note_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__TaxGLRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax GL Rule</label>
        <referenceTo>blng__GLRule__c</referenceTo>
        <relationshipLabel>Credit Note Allocations (Tax GL Rule)</relationshipLabel>
        <relationshipName>TaxGLRuleCreditNoteAllocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__TaxGLTreatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax GL Treatment</label>
        <referenceTo>blng__GLTreatment__c</referenceTo>
        <relationshipLabel>Credit Note Allocations (Tax GL Treatment)</relationshipLabel>
        <relationshipName>TaxGLTreatmentCreditNoteAllocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__TaxRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Rule</label>
        <referenceTo>blng__TaxRule__c</referenceTo>
        <relationshipLabel>Credit Note Allocations</relationshipLabel>
        <relationshipName>TaxRuleCreditNoteAllocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__TaxTreatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Treatment</label>
        <referenceTo>blng__TaxTreatment__c</referenceTo>
        <relationshipLabel>Credit Note Allocations</relationshipLabel>
        <relationshipName>TaxTreatmentCreditNoteAllocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__TypeAllocationUnallocation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Unallocated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unallocated?</label>
        <type>Checkbox</type>
    </fields>
    <label>Credit Note Allocation</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Allocation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Note Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>